Change Journey methods to getFirst/getLast